# NeuralDocs-Multimodal-RAG-Intelligence

./: README.md  main.py  pyproject.toml  requirements.txt
notebooks/: multimodalopenai.ipynb
static/css/: style.css
static/js/: main.js
templates/: index.html
